# invenio-administration

./: .editorconfig  .eslintrc.yml  .git-blame-ignore-revs  .gitignore  AUTHORS.rst  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  run-js-linter.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: api.rst  conf.py  configuration.rst  index.rst  usage.rst
invenio_administration/: __init__.py  admin.py  base.py  config.py  decorators.py  error_handlers.py  errors.py  ext.py  generators.py  marshmallow_utils.py  permissions.py  webpack.py
invenio_administration/assets/semantic-ui/js/invenio_administration/: .eslintrc.yml  index.js  package-lock.json  package.json  vitest.config.js
invenio_administration/assets/semantic-ui/js/invenio_administration/api/: actions.js  config.js  routes.js
invenio_administration/assets/semantic-ui/js/invenio_administration/src/: index.jsx  routes.js  theme.js
invenio_administration/assets/semantic-ui/js/invenio_administration/src/actions/: ActionModal.js  Actions.js  ActionsDropdown.js  Delete.js  DeleteModal.js  DeleteModalTrigger.js  Edit.js  ResourceActions.js  index.js
invenio_administration/assets/semantic-ui/js/invenio_administration/src/api/: actions.js  index.js  routes.js  serializers.js
invenio_administration/assets/semantic-ui/js/invenio_administration/src/components/: BoolFormatter.js  BoolFormatter.jsx  DateFormatter.js  DateFormatter.jsx  ErrorPage.js  Formatter.js  Formatter.jsx  Formatter.test.js  Formatter.test.jsx  Loader.js  Loader.jsx  index.js  utils.js
invenio_administration/assets/semantic-ui/js/invenio_administration/src/create/: CreatePage.js  CreatePage.jsx  create.js  create.jsx  index.js
invenio_administration/assets/semantic-ui/js/invenio_administration/src/details/: AdminDetailsView.js  DetailsComponent.js  DetailsTable.js  details.js  details.jsx  index.js  index.jsx
invenio_administration/assets/semantic-ui/js/invenio_administration/src/edit/: EditPage.js  EditPage.jsx  edit.js  edit.jsx  index.js  index.jsx
invenio_administration/assets/semantic-ui/js/invenio_administration/src/formik/: ActionForm.js  ActionForm.jsx  AdminForm.js  AdminForm.jsx  GenerateForm.js  GenerateForm.jsx  LazyForm.js  LazyForm.jsx  index.js  validation.js
invenio_administration/assets/semantic-ui/js/invenio_administration/src/search/: SearchBar.js  SearchBar.jsx  SearchBarElement.js  SearchBarElement.jsx  SearchBulkActionContext.js  SearchBulkActionContext.jsx  SearchComponents.js  SearchComponents.jsx  SearchEmptyResults.js  SearchEmptyResults.jsx  SearchFacets.js  index.js  (+7 more)
invenio_administration/assets/semantic-ui/js/invenio_administration/statistics/: AdministrationStatistics.js  index.js
invenio_administration/assets/semantic-ui/translations/invenio_administration/: i18next-scanner.config.js  i18next.js  package.json  translations.pot
invenio_administration/assets/semantic-ui/translations/invenio_administration/messages/: _generatedTranslations.js
invenio_administration/assets/semantic-ui/translations/invenio_administration/scripts/: fixTrailingNewlines.js
invenio_administration/menu/: __init__.py  menu.py
invenio_administration/templates/semantic-ui/invenio_administration/: base.html  create.html  details.html  edit.html  error.html  index.html  macros.html  search.html
invenio_administration/templates/semantic-ui/invenio_administration/dashboard/: dashboard.html
invenio_administration/templates/semantic-ui/invenio_administration/header/: header.html  header_login.html  side_bar_toggle.html
invenio_administration/templates/semantic-ui/invenio_administration/sidebar/: sidenav.html
invenio_administration/templates/semantic-ui/invenio_theme/: header_login.html
invenio_administration/translations/: messages.pot
invenio_administration/translations/zh-Hant/LC_MESSAGES/: messages.po
invenio_administration/views/: __init__.py  base.py  blueprint.py  dashboard.py  model.py  project.py  publish.py  translate.py
tests/: conftest.py  test_admin_menu.py  test_base.py  test_details_view.py  test_invenio_administration.py  test_marshmallow_utils.py
tests/mock_module/: config.py  ext.py  resource.py
tests/mock_module/administration/: __init__.py  mock.py
(+27 files in other folders)
