# SPDX-FileCopyrightText: 2015-2024 CERN.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2023-2025 KTH Royal Institute of Technology.
# SPDX-FileCopyrightText: 2025 Northwestern University.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-administration"
description = "Invenio module that adds administration panel to the system."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "admin",
  "administration",
  "backoffice",
  "invenio",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "flask-menu>=0.5.0",
  "flask-principal>=0.4.0",
  "invenio-accounts>=8.0.0,<9.0.0",
  "invenio-base>=2.3.0,<3.0.0",
  "invenio-db[postgresql,mysql]>=2.2.0,<3.0.0",
  "invenio-i18n>=3.0.0,<4.0.0",
  "invenio-records-resources>=10.0.0,<11.0.0",
  "invenio-search-ui>=4.0.0,<5.0.0",
  "invenio-theme>=4.0.0,<5.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-administration"

[project.entry-points."invenio_access.actions"]
administration_access_action = "invenio_administration.permissions:administration_access_action"
administration_view_action = "invenio_administration.permissions:administration_view_action"

[project.entry-points."invenio_assets.webpack"]
invenio_administration = "invenio_administration.webpack:theme"

[project.entry-points."invenio_base.api_apps"]
invenio_administration = "invenio_administration:InvenioAdministration"

[project.entry-points."invenio_base.apps"]
invenio_administration = "invenio_administration:InvenioAdministration"

[project.entry-points."invenio_base.blueprints"]
invenio_administration = "invenio_administration.views:get_administration_panel_bp"

[project.entry-points."invenio_base.finalize_app"]
finalize_app = "invenio_administration.ext:finalize_app"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_administration"

[project.optional-dependencies]
elasticsearch7 = [
  "invenio-search[elasticsearch7]>=3.0.0,<4.0.0",
]
opensearch1 = [
  "invenio-search[opensearch1]>=3.0.0,<4.0.0",
]
opensearch2 = [
  "invenio-search[opensearch2]>=3.0.0,<4.0.0",
]
tests = [
  "invenio-access>=6.0.0,<7.0.0",
  "invenio-app>=3.0.0,<4.0.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "sphinx>=4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_administration/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_administration/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_administration/translations/messages.pot"
output_dir = "invenio_administration/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_administration/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_administration",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_administration --cov-report=term-missing'
filterwarnings = ["ignore::pytest.PytestDeprecationWarning"]
testpaths = "tests invenio_administration"
live_server_scope = "module"

# UV needs to be told explicitly which extras are conflicting:
# https://docs.astral.sh/uv/concepts/projects/config/#conflicting-dependencies
[tool.uv]
conflicts = [
  [
    { extra = "opensearch1" },
    { extra = "opensearch2" },
    { extra = "elasticsearch7" },
  ]
]
